hacky padding add to fix squish caused by line spacing fix

--- a/sass/_project-sass/_project-Header.scss
+++ b/sass/_project-sass/_project-Header.scss
@@ -155,7 +155,8 @@
 
 .signup-Area{
   min-height:100px;
-  position:relative
+  position:relative;
+  padding-bottom: 400px;
 }
 
 .header-Outro .signup-Form{
